fixed height issue of work section on small screens

--- a/css/home.css
+++ b/css/home.css
@@ -258,10 +258,21 @@
 @media only screen and (max-width: 768px) {
     #work {
         display:block;
-        min-height: 100vh;
+        height: auto;
     }
     .work-display{
         height:10vh;
         width:30vw;
     }
 }
+
+@media only screen and (max-width: 600px) {
+    #work {
+        display:block;
+    }
+    .work-display{
+        height:15vh;
+        width:50vw;
+    }
+}
+
